[package]
name = "wksl"
authors = ["Henrik Ravn <hravnx@gmail.com>"]
description = "A small utility to wake computer up or put them to sleep over the local network"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
mac_address = { version = "1", features = ["serde"] }
serde = "1"
serde_derive = "1"
thiserror = "2"
toml = "1"
shellexpand = "3"

